--- a/src/styles/media-mixins.scss
+++ b/src/styles/media-mixins.scss
@@ -4,7 +4,7 @@ $grid-breakpoints: (
 	375: 375px,
 	576: 576px,
 	768: 768px,
-	992: 992px,
+	812: 812px,
 	1024: 1024px,
 	1280: 1280px,
 	1366: 1366px,
@@ -31,17 +31,9 @@ $grid-breakpoints: (
 //    md
 //    >> breakpoint-next(sm, $breakpoint-names: (xs sm md lg xl))
 //    md
-@function breakpoint-next(
-	$name,
-	$breakpoints: $grid-breakpoints,
-	$breakpoint-names: map-keys($breakpoints)
-) {
+@function breakpoint-next($name, $breakpoints: $grid-breakpoints, $breakpoint-names: map-keys($breakpoints)) {
 	$n: index($breakpoint-names, $name);
-	@return if(
-		$n < length($breakpoint-names),
-		nth($breakpoint-names, $n + 1),
-		null
-	);
+	@return if($n < length($breakpoint-names), nth($breakpoint-names, $n + 1), null);
 }
 
 // Minimum breakpoint width. Null for the smallest (first) breakpoint.
