--- a/src/components/hero.module.scss
+++ b/src/components/hero.module.scss
@@ -14,33 +14,44 @@
 		font-style: normal;
 		font-weight: normal;
 		font-size: 46px;
-		line-height: 66px;
+		line-height: 1.5;
 		letter-spacing: 2px;
 		color: $blue;
 
 		@include media-breakpoint-down(576) {
 			font-size: 27px;
-			line-height: 40px;
 			margin-bottom: 32px;
+		}
+
+		@include media-breakpoint-down(375) {
+			font-size: 23px;
 		}
 	}
 
 	&-line {
 		position: absolute;
-		left: -48px;
-		top: -17px;
+		left: -18px;
+		top: -14px;
 
 		width: 367px;
-		height: 107px;
+		height: 106px;
 
 		background-image: url("../../static/hero-title-line.svg");
 
 		@include media-breakpoint-down(576) {
-			width: 206px;
-			height: 60px;
-			left: -16px;
-			top: -6px;
+			width: 220px;
+			height: 64px;
+			left: -7px;
+			top: -9px;
 			background-size: cover;
+		}
+
+		@include media-breakpoint-down(375) {
+			width: 190px;
+			height: 55px;
+			left: -7px;
+			top: -9px;
+			font-size: 23px;
 		}
 	}
 }
