--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -110,6 +110,52 @@
             display: none;
           }
         }
+
+        &::before {
+          content: "";
+          position: absolute;
+          width: 100%;
+        }
+
+        &_1 {
+          &::before {
+            display: none;
+
+            left: -4px;
+            bottom: -4px;
+            width: 76px;
+            height: 4px;
+
+            background: url("../../static/about-line_mob_1.svg") no-repeat;
+
+            @include media-breakpoint-down(375) {
+              display: block;
+            }
+          }
+        }
+
+        &_2 {
+          @include media-breakpoint-down(375) {
+            display: block;
+          }
+
+          &::after {
+            display: none;
+          }
+          &::before {
+            display: none;
+            left: 0px;
+            bottom: -4px;
+
+            width: 143px;
+            height: 6px;
+
+            background: url("../../static/about-line_mob_2.svg") no-repeat;
+            @include media-breakpoint-down(375) {
+              display: block;
+            }
+          }
+        }
       }
     }
   }
