--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -217,8 +217,8 @@ h2 {
 	margin: 0 0 1.45rem;
 	padding: 0;
 	color: inherit;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+		Helvetica Neue, sans-serif;
 	font-weight: 700;
 	text-rendering: optimizeLegibility;
 }
@@ -235,8 +235,8 @@ h4 {
 	margin: 0 0 1.45rem;
 	padding: 0;
 	color: inherit;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+		Helvetica Neue, sans-serif;
 	font-weight: 700;
 	text-rendering: optimizeLegibility;
 }
@@ -252,8 +252,8 @@ h6 {
 	margin: 0 0 1.45rem;
 	padding: 0;
 	color: inherit;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+		Helvetica Neue, sans-serif;
 	font-weight: 700;
 	text-rendering: optimizeLegibility;
 	line-height: 1.45rem;
@@ -393,8 +393,7 @@ code,
 tt {
 	background-color: rgba(0, 0, 0, 0.04);
 	border-radius: 3px;
-	font-family: SFMono-Regular, Consolas, Roboto Mono, Droid Sans Mono,
-		Liberation Mono, Menlo, Courier, monospace;
+	font-family: SFMono-Regular, Consolas, Roboto Mono, Droid Sans Mono, Liberation Mono, Menlo, Courier, monospace;
 	padding: 0;
 	padding-top: 0.2em;
 	padding-bottom: 0.2em;
