--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -134,6 +134,10 @@
           max-width: 592px;
           max-height: 200px;
         }
+
+        textarea:not(:placeholder-shown) + label {
+          top: -36px;
+        }
       }
     }
 
@@ -152,6 +156,18 @@
           margin-bottom: 40px;
         }
       }
+    }
+
+    &-success {
+      display: none;
+
+      padding-right: 33px;
+      font-family: Inter;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 26px;
+      color: $orange;
     }
   }
 
