--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -40,6 +40,7 @@ template {
 a {
 	background-color: transparent;
 	-webkit-text-decoration-skip: objects;
+	outline: none !important;
 }
 a:active,
 a:hover {
