activity section layout

--- a/src/styles/activity-slider.scss
+++ b/src/styles/activity-slider.scss
@@ -1,9 +1,9 @@
 @import "../styles/var.scss";
 @import "../styles/media-mixins.scss";
 
-.about {
+.activity {
   padding: 160px 0px;
-  background-color: $blue;
+  background-color: $gray;
 
   @include media-breakpoint-down(576) {
     padding: 64px 0px;
@@ -11,31 +11,16 @@
 
   &-content {
     width: 100%;
+    margin-bottom: 88px;
     align-items: flex-start;
 
     @include media-breakpoint-down(812) {
       flex-direction: column;
-    }
-
-    &__title {
       margin-bottom: 40px;
-
-      font-family: Lora;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 40px;
-      line-height: 56px;
-
-      color: #fff;
-
-      @include media-breakpoint-down(375) {
-        font-size: 22px;
-        line-height: 32px;
-      }
     }
 
     &-box {
-      &-1 {
+      &_1 {
         min-width: 516px;
         margin-right: 80px;
 
@@ -48,12 +33,64 @@
           margin-right: 0;
         }
       }
-      &-2 {
+      &_2 {
         min-width: 592px;
 
         @include media-breakpoint-down(1280) {
           min-width: unset;
         }
+      }
+    }
+
+    &__title {
+      position: relative;
+      margin-bottom: 40px;
+
+      font-family: Lora;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 40px;
+      line-height: 56px;
+
+      color: $blue;
+
+      &::after {
+        content: "";
+
+        position: absolute;
+        left: 0px;
+        bottom: -10px;
+
+        width: 100%;
+        min-width: 398px;
+        height: 11px;
+
+        background: url("../../static/activity-line.svg") no-repeat;
+
+        @include media-breakpoint-down(1024) {
+          width: auto;
+          min-width: 360px;
+        }
+
+        @include media-breakpoint-down(812) {
+          display: block;
+        }
+
+        @include media-breakpoint-down(375) {
+          min-width: 228px;
+          height: 7px;
+          background-size: contain;
+        }
+      }
+
+      @include media-breakpoint-down(1024) {
+        font-size: 36px;
+      }
+
+      @include media-breakpoint-down(375) {
+        font-size: 22px;
+        line-height: 32px;
+        margin-bottom: 24px;
       }
     }
 
@@ -66,15 +103,7 @@
       font-size: 18px;
       line-height: 32px;
 
-      color: #fff;
-
-      &:last-of-type {
-        margin-bottom: 0;
-
-        @include media-breakpoint-down(812) {
-          margin-bottom: 40px;
-        }
-      }
+      color: $blue;
 
       @include media-breakpoint-down(812) {
         margin-bottom: 32px;
@@ -156,16 +185,21 @@
     }
   }
 
-  &-cta_desk {
-    @include media-breakpoint-down(812) {
-      display: none;
-    }
+  &-slider {
   }
 
-  &-cta_mob {
-    display: none;
-    @include media-breakpoint-down(812) {
-      display: block;
+  &-cta {
+    &_desk {
+      @include media-breakpoint-down(812) {
+        display: none;
+      }
+    }
+
+    &_mob {
+      display: none;
+      @include media-breakpoint-down(812) {
+        display: block;
+      }
     }
   }
 }
