--- a/src/components/hero.module.scss
+++ b/src/components/hero.module.scss
@@ -10,7 +10,8 @@
 		padding: 140px 0 140px;
 	}
 
-	&-title {
+	&-title,
+	&-title-en {
 		position: relative;
 		margin-bottom: 40px;
 
@@ -18,7 +19,7 @@
 		font-style: normal;
 		font-weight: normal;
 		font-size: 46px;
-		line-height: 1.4;
+		line-height: 1.5;
 		letter-spacing: 2px;
 		color: $blue;
 
@@ -32,7 +33,8 @@
 		}
 	}
 
-	&-line {
+	&-line,
+	&-line-en {
 		position: absolute;
 		left: -18px;
 		top: -14px;
@@ -56,6 +58,29 @@
 			left: -7px;
 			top: -9px;
 			font-size: 23px;
+		}
+
+		&-en {
+			width: 350px;
+			height: 102px;
+			background-repeat: no-repeat;
+			background-size: contain;
+
+			@include media-breakpoint-down(576) {
+				width: 214px;
+				height: 62px;
+				left: -8px;
+				top: -9px;
+				background-size: cover;
+			}
+
+			@include media-breakpoint-down(375) {
+				width: 184px;
+				height: 53px;
+				left: -7px;
+				top: -9px;
+				font-size: 23px;
+			}
 		}
 	}
 }
