--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -2,170 +2,188 @@
 @import "../styles/media-mixins.scss";
 
 .about {
-  padding: 160px 0px;
-  background-color: $blue;
+	padding: 160px 0px;
+	background-color: $blue;
 
-  @include media-breakpoint-down(576) {
-    padding: 64px 0px;
-  }
+	@include media-breakpoint-down(576) {
+		padding: 64px 0px;
+	}
 
-  &-content {
-    width: 100%;
-    align-items: flex-start;
+	&-content {
+		width: 100%;
+		align-items: flex-start;
 
-    @include media-breakpoint-down(812) {
-      flex-direction: column;
-    }
+		@include media-breakpoint-down(812) {
+			flex-direction: column;
+		}
 
-    &__title {
-      margin-bottom: 40px;
+		&__title {
+			margin-bottom: 40px;
 
-      font-family: Lora;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 40px;
-      line-height: 56px;
+			font-family: Lora;
+			font-style: normal;
+			font-weight: normal;
+			font-size: 40px;
+			line-height: 56px;
 
-      color: #fff;
+			color: #fff;
 
-      @include media-breakpoint-down(375) {
-        font-size: 22px;
-        line-height: 32px;
-      }
-    }
+			@include media-breakpoint-down(375) {
+				font-size: 22px;
+				line-height: 32px;
+			}
+		}
 
-    &-box {
-      &-1 {
-        min-width: 516px;
-        margin-right: 80px;
+		&-box {
+			&-1 {
+				min-width: 516px;
+				margin-right: 80px;
 
-        @include media-breakpoint-down(1024) {
-          min-width: 440px;
-        }
+				@include media-breakpoint-down(1024) {
+					min-width: 440px;
+				}
 
-        @include media-breakpoint-down(576) {
-          min-width: unset;
-          margin-right: 0;
-        }
-      }
-      &-2 {
-        min-width: 592px;
+				@include media-breakpoint-down(576) {
+					min-width: unset;
+					margin-right: 0;
+				}
+			}
+			&-2 {
+				min-width: 592px;
 
-        @include media-breakpoint-down(1280) {
-          min-width: unset;
-        }
-      }
-    }
+				@include media-breakpoint-down(1280) {
+					min-width: unset;
+				}
+			}
+		}
 
-    &__text {
-      margin-bottom: 40px;
+		&__text {
+			margin-bottom: 40px;
 
-      font-family: Inter;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 18px;
-      line-height: 32px;
+			font-family: Inter;
+			font-style: normal;
+			font-weight: normal;
+			font-size: 18px;
+			line-height: 32px;
 
-      color: #fff;
+			color: #fff;
 
-      &:last-of-type {
-        margin-bottom: 0;
+			&:last-of-type {
+				margin-bottom: 0;
 
-        @include media-breakpoint-down(812) {
-          margin-bottom: 40px;
-        }
-      }
+				@include media-breakpoint-down(812) {
+					margin-bottom: 40px;
+				}
+			}
 
-      @include media-breakpoint-down(812) {
-        margin-bottom: 32px;
-      }
+			@include media-breakpoint-down(812) {
+				margin-bottom: 32px;
+			}
 
-      @include media-breakpoint-down(375) {
-        font-size: 16px;
-        line-height: 26px;
-      }
+			@include media-breakpoint-down(375) {
+				font-size: 16px;
+				line-height: 26px;
+			}
 
-      &_part {
-        color: $orange;
-        position: relative;
+			&_part {
+				color: $orange;
+				position: relative;
 
-        &::after {
-          content: "";
+				&::after {
+					content: "";
 
-          position: absolute;
-          left: -6px;
-          bottom: -6px;
+					position: absolute;
+					left: -6px;
+					bottom: -6px;
 
-          width: 100%;
-          min-width: 259px;
-          height: 6px;
+					width: 100%;
+					min-width: 259px;
+					height: 6px;
 
-          background: url("../../static/about-line.svg") no-repeat;
+					background: url("../../static/about-line.svg") no-repeat;
 
-          @include media-breakpoint-down(1280) {
-            display: none;
-          }
-        }
+					@include media-breakpoint-down(1280) {
+						display: none;
+					}
+				}
 
-        &::before {
-          content: "";
-          position: absolute;
-          width: 100%;
-        }
+				&::before {
+					content: "";
+					position: absolute;
+					width: 100%;
+				}
 
-        &_1 {
-          &::before {
-            display: none;
+				&_en {
+					@include media-breakpoint-down(375) {
+						display: inline-block !important;
+					}
 
-            left: -4px;
-            bottom: -4px;
-            width: 76px;
-            height: 4px;
+					&::after {
+						min-width: 220px;
+					}
 
-            background: url("../../static/about-line_mob_1.svg") no-repeat;
+					&::before {
+						@include media-breakpoint-down(375) {
+							display: none !important;
+						}
+					}
+				}
 
-            @include media-breakpoint-down(375) {
-              display: block;
-            }
-          }
-        }
+				&_1 {
+					&::before {
+						display: none;
 
-        &_2 {
-          @include media-breakpoint-down(375) {
-            display: block;
-          }
+						left: -4px;
+						bottom: -4px;
+						width: 76px;
+						height: 4px;
 
-          &::after {
-            display: none;
-          }
-          &::before {
-            display: none;
-            left: 0px;
-            bottom: -4px;
+						background: url("../../static/about-line_mob_1.svg")
+							no-repeat;
 
-            width: 143px;
-            height: 6px;
+						@include media-breakpoint-down(375) {
+							display: block;
+						}
+					}
+				}
 
-            background: url("../../static/about-line_mob_2.svg") no-repeat;
-            @include media-breakpoint-down(375) {
-              display: block;
-            }
-          }
-        }
-      }
-    }
-  }
+				&_2 {
+					@include media-breakpoint-down(375) {
+						display: block;
+					}
 
-  &-cta_desk {
-    @include media-breakpoint-down(812) {
-      display: none;
-    }
-  }
+					&::after {
+						display: none;
+					}
+					&::before {
+						display: none;
+						left: 0px;
+						bottom: -4px;
 
-  &-cta_mob {
-    display: none;
-    @include media-breakpoint-down(812) {
-      display: block;
-    }
-  }
+						width: 143px;
+						height: 6px;
+
+						background: url("../../static/about-line_mob_2.svg")
+							no-repeat;
+						@include media-breakpoint-down(375) {
+							display: block;
+						}
+					}
+				}
+			}
+		}
+	}
+
+	&-cta_desk {
+		@include media-breakpoint-down(812) {
+			display: none;
+		}
+	}
+
+	&-cta_mob {
+		display: none;
+		@include media-breakpoint-down(812) {
+			display: block;
+		}
+	}
 }
