--- a/src/styles/activity-slider.scss
+++ b/src/styles/activity-slider.scss
@@ -66,7 +66,7 @@
 
 				width: 100%;
 				min-width: 398px;
-				height: 11px;
+				height: 13px;
 
 				background: url("../../static/activity-line.svg") no-repeat;
 
@@ -94,6 +94,21 @@
 				font-size: 22px;
 				line-height: 32px;
 				margin-bottom: 24px;
+			}
+
+			&_en {
+				&::after {
+					left: 0px;
+					bottom: -10px;
+
+					width: 100%;
+					min-width: unset;
+					height: 12px;
+					max-width: 280px;
+					@include media-breakpoint-down(1024) {
+						max-width: 250px;
+					}
+				}
 			}
 		}
 
