ammonia, energy content done

--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -47,6 +47,13 @@
 				}
 			}
 
+			&-block {
+				display: flex;
+				align-self: flex-start;
+				justify-content: flex-start;
+				flex-direction: column;
+			}
+
 			&__title {
 				font-family: Lora;
 				font-style: normal;
