--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -55,11 +55,13 @@
 			}
 
 			&__title {
+				margin-bottom: 24px;
+
 				font-family: Lora;
 				font-style: normal;
 				font-weight: normal;
 				font-size: 40px;
-				line-height: 56px;
+				// line-height: 56px;
 
 				color: $blue;
 
